# popcasting_extractor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTROL_CAMBIOS_IMPLEMENTADO.md  CORRECCION_EPISODIOS_PROBLEMATICOS.md  ESTRUCTURA_PROYECTO.md  README.md  README_EPISODIOS_FALTANTES.md  README_MP3_UPLOAD.md  README_RSS.md  README_SUPABASE_PRINCIPAL.md  README_SYNOLOGY.md  SUPABASE_MIGRATION_SUMMARY.md  TODO.md  TODOs.md  _old_main.py  _popcasting.db  actualizar_episodio_60.py  actualizar_episodio_84_final.py  analyze_logs.py  batch_web_extraction.py  buscar_episodios_faltantes_auto.py  check_data.py  check_extra_links.py  clear_analysis.py  comparison_demo.py  completar_episodios_faltantes.py  config.ini  debug_check_shorturl.py  debug_colon_ending.py  deploy_rss.sh  ejemplo_output.json  episodios_faltantes_actualizado.txt  extractor_episodios_antiguos.py  extraer_episodios_61_62_63.py  extraer_episodios_61_62_63_final.py  extraer_episodios_61_62_63_mejorado.py  extraer_episodios_65_66_67_68_70.py  feed.xml  generar_informe.py  (+34 more)
*** borrar_synology/: README_SYNOLOGY_CLIENT.md  example_usage.py
*** borrar_tests/: diagnose_mp3_files.py  popcasting_extractor.py  popcasting_extractor_fixed.py  test_audio_duration.py  test_audio_duration_3_files.py  test_audio_integration.py  test_audio_manager.py  test_mp3_download.py  test_mutagen_extraction.py  upload_to_synology.py
data/: 00-20.html  21-41.html  42-63.html  64-91.html  Especiales.json  episodios_faltantes.txt  manual_episodes.json  missing_episodes.json
docs/: ACTUALIZACION_SINCRONIZADOR_RSS_FINAL.md  README.md  (+16 more)
(+243 files in other folders)
