[project]
name = "popcasting-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "lxml>=6.0.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
]

[tool.setuptools]
packages = ["services"]

[tool.ruff]
# Habilitar correcciones automáticas
fix = true
unsafe-fixes = true

# Configuración del linter
[tool.ruff.lint]
# Reglas a incluir
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Reglas a ignorar
ignore = [
    "E501",  # Line too long (manejar manualmente)
    "B008",  # Do not perform function calls in argument defaults
]

# Configuración específica por archivo
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Configuración de formato
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
